# zendesk-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/zendesk-mcp/: __init__.py  server.py
