[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendesk-mcp"
version = "1.0.0"
description = "A complete MCP server for Zendesk — 60+ tools covering tickets, users, custom fields, macros, triggers, SLAs, Help Center and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["zendesk", "mcp", "claude", "ai", "automation", "helpdesk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
zendesk-mcp = "zendesk_mcp.server:cli_entry"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/zendesk-mcp"
Repository = "https://github.com/YOUR_USERNAME/zendesk-mcp"
Issues = "https://github.com/YOUR_USERNAME/zendesk-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zendesk_mcp"]
